# portal-pal

./: .dockerignore  .env.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md  docker-compose.yml  justfile  main.py  pyproject.toml  render.yml  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml  zizmor.yml
CHANGELOG/: 0.1.0.md
apps/backend/: Dockerfile  pyproject.bak  pyproject.toml
apps/backend/src/backend/: agent.py  cache.py  config.py  main.py  monitoring.py  security.py
apps/backend/tests/: conftest.py  test_auth.py  test_cache.py  test_security.py
apps/etl/: pyproject.toml
apps/etl/src/etl/: main.py
apps/frontend/: pyproject.toml
backend/: pyproject.toml
backend/src/backend/: agent.py  main.py
docs/: api.md  index.md  installation.md  usage.md
frontend/: pyproject.toml
src/open_data_portal_pal/: __init__.py  cli.py  testy.py
src/open_data_portal_pal/app/: agent.py  cache.py  config.py  main.py  models.py  monitoring.py  security.py
src/open_data_portal_pal/backend/: monitoring.py
tests/: test_open_data_portal_pal.py
