[project]
name = "portal-pal"
version = "0.1.0"
description = "Deployable LLM + RAG System for Interacting with Open Data Portals."
readme = "README.md"
authors = [{ name = "Alexander J. Senetcky", email = "me@asenetcky.dev" }]
maintainers = [{ name = "Alexander J. Senetcky", email = "me@asenetcky.dev" }]
classifiers = [
    "Typing :: Typed",
    # TODO: Add additional classifiers as needed
]
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "backend",
    "frontend",
    "sodapy>=2.2.0",
]

[tool.uv.sources]
backend = { workspace = true }
frontend = { workspace = true }

[tool.uv.workspace]
members = ["apps/*"]

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typecheck" },
    "httpx2>=2.4.0",
    "pytest>=9.1.0",
]
lint = ["ruff"]
test = ["coverage", "pytest"]
typecheck = ["ty"]
docs = ["zensical", "mkdocstrings-python"]

[project.urls]
bugs = "https://github.com/asenetcky/portal-pal/issues"
changelog = "https://github.com/asenetcky/portal-pal/releases"
documentation = "https://asenetcky.github.io/portal-pal/"
homepage = "https://github.com/asenetcky/portal-pal"


[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]

[tool.coverage.run]
branch = true
parallel = true
source = ["apps/backend/src/backend"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
exclude_also = [
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@overload",
    "@typing.overload",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.uv]
default-groups = ["dev"]
