[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "asenetcky", email = "me@asenetcky.dev" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.137.1",
    "langchain-core>=1.4.7",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "langsmith>=0.8.16",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "slowapi>=0.1.10",
    "uvicorn>=0.49.0",
]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"
